test: resolve CampaignE2ETest failure and enhance E2E stability
- Protect CampaignUpgrade and Commentary data in DatabaseCleaner.
- Clear all caches during AbstractIntegrationTest database reset.
- Refactor CampaignE2ETest for modern Java conventions and better assertions.
- Ensure static configuration data is preserved across test runs.